# chess-project

./: .gitignore  README.md
majkowski/introduction/: CMakeLists.txt
majkowski/introduction/program/: CMakeLists.txt
majkowski/introduction/program/src/: main.cpp
majkowski/workshop/: CMakeLists.txt
majkowski/workshop/program/: CMakeLists.txt
majkowski/workshop/program/src/: main.cpp
placek/introduciton/: CMakeList.txt
placek/introduciton/program/src/: main.cpp
placek/introduction/: CMakeLists.txt
placek/introduction/program/: CMakeLists.txt
placek/introduction/program/src/: main.cpp
placek/workshop/: CMakeLists.txt
placek/workshop/program/: CMakeLists.txt
placek/workshop/program/src/: main.cpp
project/: CMakeLists.txt
project/libpointercomparison/: CMakeLists.txt  lib.cpp
project/program/: CMakeLists.txt
project/program/src/: main.cpp
